WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285088
AX: AXProperty::SupportsDragging isn't updated when the draggable attribute changes
https://bugs.webkit.org/show_bug.cgi?id=285088
Summary
AX: AXProperty::SupportsDragging isn't updated when the draggable attribute c...
Tyler Wilcock
Reported
2024-12-22 19:19:27 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-22 19:19:35 PST
<
rdar://problem/141922026
>
Tyler Wilcock
Comment 2
2024-12-22 19:22:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38328
EWS
Comment 3
2024-12-23 15:18:29 PST
Committed
288260@main
(3e77b719af8b): <
https://commits.webkit.org/288260@main
> Reviewed commits have been landed. Closing PR #38328 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug