AX: AXProperty::SupportsDragging isn't updated when the draggable attribute changes https://bugs.webkit.org/show_bug.cgi?id=285088 rdar://141922026

Reviewed by Chris Fleizach.

With this commit, we update AXProperty::SupportsDragging when the draggable attribute changes.

* LayoutTests/accessibility/mac/supports-grabbed-after-dynamic-change-expected.txt: Added.
* LayoutTests/accessibility/mac/supports-grabbed-after-dynamic-change.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::determineDropEffects const):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeProperties):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperties):

Canonical link: https://commits.webkit.org/288260@main